force-app/main/default/objects/Asset_Detail_ELS__x/Asset_Detail_ELS__x.object-meta.xml
<CustomObject>
    <externalDataSource>Core_Banking_Data_Source</externalDataSource>
    <externalName>AssetDetailELS</externalName>
    <label>Asset Detail ELS</label>
    <pluralLabel>Asset Details ELS</pluralLabel>
</CustomObject>