force-app/main/default/objects/Asset_Detail_ELS__x/fields/Asset_Finance_ELS__c.field-meta.xml
<CustomField>
    <fullName>Asset_Finance_ELS__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_EBD</complianceGroup>
    <description>Associated Id of ELS</description>
    <externalDeveloperName>ELSId</externalDeveloperName>
    <label>Asset Finance ELS</label>
    <length>18</length>
    <referenceTo>Asset_Finance_ELS__x</referenceTo>
    <relationshipLabel>Asset Details ELS</relationshipLabel>
    <relationshipName>Asset_Details_ELS</relationshipName>
    <type>ExternalLookup</type>
</CustomField>