force-app/main/default/objects/Asset_Detail_ELS__x/fields/Asset_No__c.field-meta.xml
<CustomField>
    <fullName>Asset_No__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_EBD</complianceGroup>
    <description>Asset identifier</description>
    <externalDeveloperName>AssetNo</externalDeveloperName>
    <label>Asset Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>