force-app/main/default/objects/Asset_Detail_ELS__x/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_EBD</complianceGroup>
    <description>Value for an asset</description>
    <externalDeveloperName>Value</externalDeveloperName>
    <label>Value ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>