force-app/main/default/objects/Asset_Detail_ELS__x/fields/Value_Type__c.field-meta.xml
<CustomField>
    <fullName>Value_Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_EBD</complianceGroup>
    <description>value type of asset </description>
    <externalDeveloperName>ValueType</externalDeveloperName>
    <label>Value Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>