force-app/main/default/objects/Asset_Detail_ELS__x/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_EBD</complianceGroup>
    <description>Year of manufacture of asset</description>
    <externalDeveloperName>Year</externalDeveloperName>
    <label>Year</label>
    <length>50</length>
    <type>Text</type>
</CustomField>